// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopNavigation styles should render with secondary links 1`] = `
.circuit-0[aria-busy='true'] {
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (max-width: 1279px) {
  .circuit-0 {
    display: none;
  }
}

@media (min-width: 1280px) {
  .circuit-0 {
    min-width: 48px;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

.circuit-1 {
  position: fixed;
  z-index: 800;
  top: 57px;
  bottom: 0;
  left: 0;
  height: calc(100vh - 57px);
  width: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFF;
  padding-top: 12px;
  overflow-y: auto;
  overflow-x: hidden;
  box-shadow: 1px 0 #CCC;
  -webkit-transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.circuit-1:hover,
.circuit-1:focus-within {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  width: 220px;
}

.circuit-1::-webkit-scrollbar {
  display: none;
}

.circuit-2 {
  list-style: none;
}

.circuit-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  color: #3063E9;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #F5F5F5;
}

.circuit-3:active {
  background-color: #E6E6E6;
}

.circuit-3:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 1279px) {
  .circuit-3 {
    margin-bottom: 1px;
  }

  .circuit-3::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #CCC;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-3 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-3:hover {
  background-color: #F0F6FF;
}

.circuit-4 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-5 {
  display: inline-block;
  line-height: 0;
}

.circuit-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
}

@media (max-width: 1279px) {
  .circuit-6 {
    font-size: 24px;
    line-height: 28px;
  }
}

.circuit-7 {
  position: -webkit-sticky;
  position: sticky;
  top: 57px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  background-color: #FFF;
  margin-left: 48px;
  height: calc(100vh - 57px);
  width: 200px;
  border-right: 1px solid #CCC;
}

.circuit-8 {
  display: inline-block;
  line-height: 0;
  margin: 24px 16px 12px;
}

.circuit-9 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 0;
}

.circuit-11 {
  display: inline-block;
  line-height: 0;
  margin: 32px 16px 8px;
}

.circuit-12 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 20px;
  color: #000;
}

.circuit-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  outline: none;
  color: #1A1A1A;
  background-color: #FFF;
  text-align: left;
  cursor: pointer;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 16px 24px;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.circuit-14:hover {
  background-color: #F5F5F5;
}

.circuit-14:active {
  background-color: #E6E6E6;
}

.circuit-14:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-14:focus::-moz-focus-inner {
  border: 0;
}

.circuit-14:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-14:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (min-width: 1280px) {
  .circuit-14 {
    padding: 12px;
    padding-left: 20px;
  }
}

.circuit-15 {
  display: inline-block;
  line-height: 0;
  margin-right: 8px;
}

.circuit-16 {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}

<div>
  <div
    aria-busy="false"
    class="circuit-0"
  >
    <nav
      aria-label="Primary"
      class="circuit-1"
    >
      <ul
        class="circuit-2"
        role="list"
      >
        <li>
          <a
            aria-current="page"
            class="circuit-3"
            data-focus-list="1"
            href="/shop"
          >
            <span
              class="circuit-4"
            >
              <svg
                fill="none"
                height="24"
                role="presentation"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7 23a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14-3a3 3 0 1 0-5.999 0A3 3 0 0 0 21 20zm0-16H5.114a2 2 0 0 1-1.921-1.445L2.92 1.61a1 1 0 0 0-1.9.59l3.24 11.35A2 2 0 0 0 6.18 15H19a2 2 0 0 0 1.92-1.45l2-7c.052-.179.08-.364.08-.55a2.006 2.006 0 0 0-2-2z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="circuit-5"
            >
              <span
                class="circuit-6"
              >
                Shop
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <nav
      aria-label="Secondary"
      class="circuit-7"
    >
      <span
        class="circuit-8"
      >
        <h2
          class="circuit-9"
        >
          Shop
        </h2>
      </span>
      <ul
        class="circuit-2"
        role="list"
      >
        <li>
          <span
            class="circuit-11"
          >
            <h3
              class="circuit-12"
            >
              For Kids
            </h3>
          </span>
          <ul
            class="circuit-2"
            role="list"
          >
            <li>
              <a
                class="circuit-14"
                data-focus-list="2"
                href="/shop/toys"
              >
                <span
                  class="circuit-15"
                >
                  <p
                    class="circuit-16"
                  >
                    Toys
                  </p>
                </span>
              </a>
            </li>
            <li>
              <a
                class="circuit-14"
                data-focus-list="2"
                href="/shop/books"
              >
                <span
                  class="circuit-15"
                >
                  <p
                    class="circuit-16"
                  >
                    Books
                  </p>
                </span>
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DesktopNavigation styles should render without secondary links 1`] = `
.circuit-0[aria-busy='true'] {
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (max-width: 1279px) {
  .circuit-0 {
    display: none;
  }
}

@media (min-width: 1280px) {
  .circuit-0 {
    min-width: 48px;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

.circuit-1 {
  position: fixed;
  z-index: 800;
  top: 57px;
  bottom: 0;
  left: 0;
  height: calc(100vh - 57px);
  width: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFF;
  padding-top: 12px;
  overflow-y: auto;
  overflow-x: hidden;
  box-shadow: 1px 0 #CCC;
  -webkit-transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.circuit-1:hover,
.circuit-1:focus-within {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  width: 220px;
}

.circuit-1::-webkit-scrollbar {
  display: none;
}

.circuit-2 {
  list-style: none;
}

.circuit-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #F5F5F5;
}

.circuit-3:active {
  background-color: #E6E6E6;
}

.circuit-3:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 1279px) {
  .circuit-3 {
    margin-bottom: 1px;
  }

  .circuit-3::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #CCC;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-3 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-4 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-5 {
  display: inline-block;
  line-height: 0;
}

.circuit-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}

@media (max-width: 1279px) {
  .circuit-6 {
    font-size: 24px;
    line-height: 28px;
  }
}

<div>
  <div
    aria-busy="false"
    class="circuit-0"
  >
    <nav
      aria-label="Primary"
      class="circuit-1"
    >
      <ul
        class="circuit-2"
        role="list"
      >
        <li>
          <a
            class="circuit-3"
            data-focus-list="3"
            href="/"
          >
            <span
              class="circuit-4"
            >
              <svg
                fill="none"
                height="24"
                role="presentation"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23 9a1 1 0 0 1-1.57.82l-1.43-1V20.5a2.5 2.5 0 0 1-2.5 2.5H15a1 1 0 0 1-1-1v-5a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v5a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 20.5V8.82l-1.43 1A1.011 1.011 0 0 1 2 10a1 1 0 0 1-.57-1.82l10-7a.992.992 0 0 1 1.14 0l10 7A.999.999 0 0 1 23 9z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="circuit-5"
            >
              <span
                class="circuit-6"
              >
                Home
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
